# MineSweeper

./: .gitignore  CMakeLists.txt  main.cpp
include/: GameSingleton.hpp  MineSweeperMap.hpp  MineSweeperUI.hpp  design.hpp
src/: GameSingleton.cpp  MineSweeperMap.cpp  MineSweeperUI.cpp
test/: MineSweeperMapTests.hpp  test.cpp
widgets_lib/: CMakeLists.txt
widgets_lib/include/: widgets.hpp
widgets_lib/src/: widgets.cpp
